# voiceforge

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/voiceforge/: __init__.py  config.py  exceptions.py  logging.py
src/voiceforge/audio/: __init__.py  utils.py
src/voiceforge/cli/: app.py  config_cmd.py  engine_cmd.py  profile_cmd.py  synth_cmd.py  voice_cmd.py
src/voiceforge/engine/: __init__.py  base.py  indextts2.py  registry.py
src/voiceforge/profile/: __init__.py  schema.py
tests/: conftest.py  test_audio_convert.py  test_audio_utils.py  test_cli.py  test_config.py  test_config_cmd.py  test_engine_cmd.py  test_engine_registry.py  test_indextts2.py  test_profile_extract_cmd.py  test_profile_info_cmd.py  test_profile_schema.py  test_synth_batch.py  test_synth_cmd.py  test_synth_validation.py  test_voice_cmd.py
