[project]
name = "voiceforge"
version = "0.1.0"
description = "Voice cloning CLI tool with multi-engine support"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.15",
    "rich>=13.0",
    "indextts",
]

[project.scripts]
voiceforge = "voiceforge.cli.app:app"

[build-system]
requires = ["hatchling >= 1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voiceforge"]

[tool.uv]
no-build-isolation-package = ["deepspeed"]

[tool.uv.sources]
indextts = { path = "../../tts/index-tts", editable = true }
torch = [{ index = "pytorch-cuda", marker = "sys_platform == 'linux'" }]
torchaudio = [{ index = "pytorch-cuda", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: requires GPU and loaded models (deselect with '-m \"not gpu\"')",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
